[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/backgrounds/colored_grass.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/kenney_future_64.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/fonts/Kenney Future Narrow.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://src/screens/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/kenney_future_narrow_16.tres" type="DynamicFont" id=5]
[ext_resource path="res://src/screens/transition/FadeTransition.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/audio/music/Juhani Junkala [Chiptune Adventures] 4. Stage Select.ogg" type="AudioStream" id=7]
[ext_resource path="res://assets/audio/sfx/sfx_menu_select3.wav" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
next_scene_path = "res://src/levels/Level01.tscn"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1280, 0 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
margin_top = -256.0
margin_right = 1024.0
margin_bottom = 768.0
rect_scale = Vector2( 1.25, 1.25 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeTransition" parent="." instance=ExtResource( 6 )]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VB" type="VBoxContainer" parent="MarginContainer"]
margin_left = 30.0
margin_top = 30.0
margin_right = 1250.0
margin_bottom = 690.0
custom_constants/separation = 100
alignment = 1

[node name="Title" type="Label" parent="MarginContainer/VB"]
margin_top = 223.0
margin_right = 1220.0
margin_bottom = 295.0
custom_fonts/font = ExtResource( 2 )
text = "Xeno Platformer"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VB" type="VBoxContainer" parent="MarginContainer/VB"]
margin_top = 395.0
margin_right = 1220.0
margin_bottom = 437.0
custom_constants/separation = 15

[node name="StartGame" type="Button" parent="MarginContainer/VB/VB"]
margin_left = 498.0
margin_right = 721.0
margin_bottom = 42.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Start Game"
flat = true

[node name="VB2" type="VBoxContainer" parent="MarginContainer"]
margin_left = 1025.0
margin_top = 562.0
margin_right = 1250.0
margin_bottom = 690.0
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="Credits" type="Label" parent="MarginContainer/VB2"]
margin_right = 225.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 5 )
text = "Credits"
align = 1

[node name="Programmer" type="Label" parent="MarginContainer/VB2"]
margin_top = 22.0
margin_right = 225.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 5 )
text = "Programmer: Kanata.EXE"

[node name="Art" type="Label" parent="MarginContainer/VB2"]
margin_top = 44.0
margin_right = 225.0
margin_bottom = 62.0
custom_fonts/font = ExtResource( 5 )
text = "Art: Kenney"

[node name="Sound" type="Label" parent="MarginContainer/VB2"]
margin_top = 66.0
margin_right = 225.0
margin_bottom = 84.0
custom_fonts/font = ExtResource( 5 )
text = "Sound: SubspaceAudio"

[node name="Music" type="Label" parent="MarginContainer/VB2"]
margin_top = 88.0
margin_right = 225.0
margin_bottom = 106.0
custom_fonts/font = ExtResource( 5 )
text = "Music: SubspaceAudio"

[node name="GameEngine" type="Label" parent="MarginContainer/VB2"]
margin_top = 110.0
margin_right = 225.0
margin_bottom = 128.0
custom_fonts/font = ExtResource( 5 )
text = "Game Engine: Godot"

[node name="MainTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="StartSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[connection signal="pressed" from="MarginContainer/VB/VB/StartGame" to="." method="new_game"]
